Formatting and Final edits

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -5,7 +5,7 @@
    "id": "32e6ff80",
    "metadata": {},
    "source": [
-    "## **How Old is this Abalone?: Predicting the Age of Abalone Based on Physical Measurements**"
+    "## **How Old is this Abalone? Predicting the Age of Abalone Based on Physical Measurements**"
    ]
   },
   {
@@ -669,7 +669,9 @@
    "source": [
     "## Reasoning for Predictors\n",
     "\n",
-    "The reason we picked whole weight, shell weight, and height as our predictors is because out of all the predictors, these 3 showed the strongest positive relationship with our target variable, age. From the ggpairs plots, we can observe that all 3 predictors are higher in correlation compared to the other variables. A strong correlation often indicates a meaningful relationship between our target variable and our predictor. Additionally, variables with stronger correlation might help with predictions. In other words, as the predictor changes, often, the target variable also changes, improving the models ability to predict. Since the original dataset did not have an age column, we mutated the dataset to create a new age column by adding a value of 1.5 to each value in the \"Rings\" columns. This is a widely accepted method of approximating an abalone's age (Hossain & Chowdhury, 2019) as some rings of the shell are not easily visible, even under a microscope. It is also worth noting that at approximately 12.5 years of age, we see that the abalones do not show much growth in terms of its length, diameter, and whole weight. This phenomenon may be caused by human activity/harvesting because abalones do not simply have a stunted growth at 12.5 years old and then start growing again about 10 years later. When abalones are about 4 years old, they reach a size where they are considered \"marketable\" (Venter et al., 2018), so by the time the abalones reach 12.5 years old, most of them would be harvested by then.\n",
+    "We chose the three predictive variables of whole weight, shell weight, and height due to their high correlation value when regressed against the age variable using the ggpairs() function. A strong correlation often indicates a meaningful relationship between our target variable and our predictor. Additionally, variables with stronger correlation might help with predictions. In other words, as the predictor changes, often, the target variable also changes, improving the model's ability to predict. We then have additional graphs depicting each predictor variable against our target variable to better see the line of best fit. From the graph, we used imperial units of lbs and feet, similar to the original dataset. \n",
+    "\n",
+    "Since the original dataset did not have an age column, we mutated the dataset to create a new age column by adding a value of 1.5 to each value in the \"Rings\" columns. This is a widely accepted method of approximating an abalone's age (Hossain & Chowdhury, 2019) as some rings of the shell are not easily visible, even under a microscope. It is also worth noting that at approximately 12.5 years of age, we see that the abalones do not show much growth in terms of its length, diameter, and whole weight. This phenomenon may be caused by human activity/harvesting because abalones do not simply have a stunted growth at 12.5 years old and then start growing again about 10 years later. When abalones are about 4 years old, they reach a size where they are considered \"marketable\" (Venter et al., 2018), so by the time the abalones reach 12.5 years old, most of them would be harvested by then.\n",
     "\n"
    ]
   },
@@ -924,11 +926,13 @@
    "id": "6b2beb62-106b-47bc-a982-c73a476b8639",
    "metadata": {},
    "source": [
-    "To perform our analysis, we used KNN regression. We chose this because we worried that the relationship between the predictors and the target variable, age, would not be linear. As well, the height, whole weight, and shell weight all have similar characteristics for each age. Thus, since these abalone have localized patterns, KNN regression is well suited for this problem.\n",
-    "To begin with our analysis, we first split our data into training and testing data, helping us perform our final RMSPE evaluation. We then created a recipe with the target variable, age, and all our predictors, height, whole weight, and shell weight. In addition, we scaled and centered the data so that we avoid biased impacts from any of our predictors.\n",
-    "As well, it is essential that we choose the best K (number of neighbors) for our dataset. This is because a K that is too small makes the model too sensitive while a K that is too big may ignore useful data. In this process, we used k-fold-cross-validation (10 folds)  and tuning for our model. This splits our data into multiple folds, trains the model on subsets of that data, and finally, evaluates the performance on the remaining fold. From the metrics we collected for each k, we filtered for RMSE value, arranged by mean, and then sliced the 1st row for the best K value, which was determined to be 54. \n",
-    "Using this new K value, we retrained our model using the engine “kknn” and the mode “regression”. After creating the workflow and fitting the data, we were able to calculate the RMSPE of our model by evaluating our testing data. With the predict() function, we obtained a prediction for each observation and by using metrics(), we were able to obtain our RMSPE of 2.39.\n",
-    "\n"
+    "To perform our analysis, we used KNN regression. We chose regression as opposed to classification since we would be predicting a numerical value, age. Also, we worried that the relationship between the predictors and the target variable, age, would not be linear, which is why we did not use linear regression. In addition, height, whole weight, and shell weight all have similar characteristics for each age group. Thus, since these abalone have localized patterns, KNN regression is well suited for this problem.\n",
+    "\n",
+    "To begin with our analysis, we first split our data into training and testing data, helping us perform our final RMSPE evaluation. We then created a recipe with the target variable, age, and our three predictors, height, whole weight, and shell weight. In addition, we scaled and centered the data in order to avoid biased impacts from any of our predictors.\n",
+    "\n",
+    "As well, it is essential that we choose the best K (number of neighbors) for our dataset. This is because a K that is too small makes the model too sensitive while a K that is too big may ignore useful data. In this process, we used k-fold-cross-validation (10 folds)  and tuning for our model. This splits our data into multiple folds, trains the model on subsets of that data, and finally, evaluates the performance on the remaining fold. From the metrics we collected for each K, we filtered for RMSE value, arranged by mean, and then sliced the 1st row for the best K value, which was determined to be 54. \n",
+    "\n",
+    "Using this new K value, we retrained our model using the engine “kknn” and the mode “regression”. After creating the workflow and fitting the data, we were able to calculate the RMSPE of our model by evaluating our testing data. With the predict() function, we obtained a prediction for each observation and by using metrics(), we were able to obtain our RMSPE of 2.39.\n"
    ]
   },
   {
@@ -946,34 +950,28 @@
    "id": "c0b22332-a2ed-45b7-87e4-0a6d4e7e1e2b",
    "metadata": {},
    "source": [
-    "Ultimately, we found that our model was able to predict the age of the abalones based on the three predictors (whole weight, diameter, and length) with an error of about 2.39 years. We expected our model to be a good predictor of the actual abalone age, and this was what we found because our RMSPE value of about 2.39 means that our model is able to predict the actual age of abalone with an error of about ∓2.39 years. Although we are used to a “good” RMSPE value of less than 1 from our in-class worksheets, when we put our project’s RMSPE value into perspective, and considering the abalone age values in our dataset range up to 30 years of age, we can see that it is actually quite good. For instance, if an abalone were 20 years old, then our model could predict its age to be anywhere from about 18 to 22 years old. Being able to predict the age of anything within 2 years of its actual age is a rather significant feat in terms of accuracy, thus overall our model was a success.\n",
-    "We also chose the three predictive variables due to their high correlation value when regressed against the age variable using the ggpair() function. We then have additional graphs depicting each predictor variable against our target variable to better see the line of best fit. From the graph, we used imperial units of lbs and feet, similar to the original data.\n",
-    "Our findings are potentially quite impactful, particularly for the fields of conservation and marine management. With the use of easily measurable variables to determine the age of abalone, this could be utilized to measure and monitor the growth and health of abalone populations. It could also contribute to the improvement and increased sustainability of aquaculture. By utilizing easily determinable characteristics of abalone, farmers could determine optimal harvesting length for more sustainable and environmentally friendly harvesting.\n",
-    "There are countless areas and questions for further study, for example, examining how the age of abalone varies across different geographical habitats. The impacts of pollution on the growth and age of abalone could be a promising area of future study as well. \n",
+    "Ultimately, we found that our model was able to predict the age of the abalones based on the three predictors (whole weight, diameter, and length) with an error of about 2.39 years. This was the result after using the best K value of 54, determined through tuning and cross-validation. We expected our model to be a good predictor of the actual abalone age, and this was what we found because our RMSPE value of about 2.39 means that our model is able to predict the actual age of abalone with an error of about ∓2.39 years. Although we are used to a “good” RMSPE value of less than 1 from our in-class worksheets, when we put our project’s RMSPE value into perspective, and considering the abalone age values in our dataset range up to 30 years of age, we can see that it is actually quite good. For instance, if an abalone were 20 years old, then our model could predict its age to be anywhere from about 18 to 22 years old. Being able to predict the age of anything within 2 years of its actual age is a rather significant feat in terms of accuracy, thus overall our model was a success.\n",
     "\n",
+    "One aspect of our data analysis that we did not expect was that our regression graphs, particularly the graph depicting whole weight vs. age appeared to be overfitted. This was the case even when increasing the number of nearest neighbors and employing cross-validation.  This may be due to a smaller training dataset which is not providing enough information for the model to generalize well. Gathering more data can help address the issue. Alternatively, the overfitting may also be related to the over-clustering of points. As a result, the model might try to fit each individual point precisely, including any noise in the regression data. This can lead to a model that is overly complex and excessively focused on capturing details from our data, making it prone to overfitting.\n",
     "\n",
-    "**Summarizing what we found**\n",
-    "\n",
-    "Ultimately, we found that our model was able to predict the age of the abalones based on the three predictors (whole weight, diameter, and length) to an accuracy of about 2.39 years. Considering the abalone age values in our dataset range up to 30 years of age, this is relatively accurate. This was what we expected to find because our RMSPE value of about 2.39 means that our model is able to predict the actual age of abalone with an error of about ∓2.39 years. Although we are used to a “good” RMSPE value of less than 1 from our in-class worksheets, when we put our project’s RMSPE value into perspective we can see that it is actually quite good. For instance, if an abalone were 20 years old, then our model could predict its age to be anywhere from about 18 to 22 years old. Being able to predict the age of anything within 2 years of its actual age is a rather significant feat in terms of accuracy, thus overall our model was a success.\n",
-    "\n",
-    "**Discussing what impact our findings could have**\n",
+    "**Discussing Potential Impacts of our Findings**\n",
     "\n",
     "*Conservation and Marine Management*\n",
     "\n",
-    "The result of this regression analysis project plays an important role in the conservation and management efforts related to abalone populations. By being able to determine the relationship between abalone’s age and easily measurable variables such as weight, diameter, and length, it becomes possible to assess the growth and health of abalone populations more effectively. Conservationists and marine managers can utilize this as indicator to monitor and evaluate the status of abalone populations, identify growth rates, and implement conservation measures. This knowledge contributes to the sustainable management and conservation of abalone, promoting these important marine species' long-term health. \n",
+    "The result of this regression analysis project could potentially play an important role in the conservation and management efforts related to abalone populations. By being able to determine the relationship between abalone’s age and easily measurable variables such as weight, diameter, and length, it becomes possible to assess the growth and health of abalone populations more effectively. Conservationists and marine managers can utilize this as an indicator to monitor and evaluate the status of abalone populations, identify growth rates, and implement conservation measures. This knowledge contributes to the sustainable management and conservation of abalones, promoting these important marine species' long-term health.\n",
     "\n",
     "*Similar Studies on Different Species*\n",
     "\n",
-    "The methodology and approach used in this research can serve as a template for conducting similar studies on different shellfish species. By examining the relationships between age and easily measurable physical characteristics, researchers can learn about various shellfish species' growth patterns and history traits. Understanding these relationships across different species can provide more understanding of growth and contribute to the conservation and management of other economically and ecologically important shellfish populations.\n",
+    "The methodology and approach used in this research can serve as a template for conducting similar studies on different species such as shellfish. By examining the relationships between age and easily measurable physical characteristics, researchers can learn about various shellfish species' growth patterns and history traits. Understanding these relationships across different species can provide more understanding of growth and contribute to the conservation and management of other economically and ecologically important shellfish populations.\n",
     "\n",
     "*Improvement of Abalone Aquaculture*\n",
     "\n",
-    "The findings of this regression analysis project are important for the improvement of abalone aquaculture practices. By using easily determinable characteristics such as weight, diameter, and length, abalone farmers can estimate the age of individual abalone more accurately. This information can be used to determine optimal harvesting age and season, ensuring that abalone is harvested at the appropriate stage of growth for maximum yield and quality. This will in turn increase the efficiency and profitability of abalone farming operations.\n",
+    "The findings of this regression analysis project are important for the improvement of abalone aquaculture practices. By using easily determinable characteristics such as weight, diameter, and length, abalone farmers can estimate the age of individual abalone more accurately. This information can be used to determine optimal harvesting age and season, ensuring that abalones are harvested at the appropriate stage of growth for maximum yield and quality. This will in turn increase the efficiency and profitability of abalone farming operations. \n",
     "\n",
-    "**Discussing what future questions this could lead to**\n",
-    "- How does the age of abalone vary across different geographical habitats?\n",
-    "- What impact does pollution have on the growth and age of abalone?\n",
-    "- At what age should abalone be optimally harvested based on its size and weight?\n"
+    "**Discussing Potential Future Questions Stemming from this Research**\n",
+    "- How does the age of abalones vary across different geographical habitats?\n",
+    "- What impact does pollution have on the growth and age of abalones?\n",
+    "- At what age should abalones be optimally harvested based on its size and weight?\n"
    ]
   },
   {
@@ -1007,14 +1005,6 @@
    "source": [
     "Venter, L., Loots, D. T., Vosloo, A., Rensburg, P. J. v., & Lindeque, J. Z. (2018). &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; Abalone growth and associated aspects: now from a metabolic perspective. *Reviews in Aquaculture, 10*(2), 451-473.  &emsp; &emsp; &emsp; &emsp; &emsp;  https://doi.org/10.1111/raq.12181"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "21c99d8f-32c4-42cc-9d94-0b5b6628ce8d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
