--- a/Report.ipynb
+++ b/Report.ipynb
@@ -987,7 +987,7 @@
    "id": "b14b4b8a-b4ad-47fd-b7cb-15054604d8cb",
    "metadata": {},
    "source": [
-    "Hossain, M. M., & Chowdhury, M. N. (2019, January). *Econometric Ways to Estimate the Age and Price of Abalone*.  &emsp;  &emsp;  &emsp;  &emsp; &emsp; &emsp;  &emsp;  &emsp;  &emsp; (MPRA Paper No. 91210). https://mpra.ub.uni-muenchen.de/91210/1/MPRA_paper_91210.pdf"
+    "Hossain, M. M., & Chowdhury, M. N. (2019, January). *Econometric Ways to Estimate the Age and Price of Abalone*. (MPRA Paper No. 91210). https://mpra.ub.uni-muenchen.de/91210/1/MPRA_paper_91210.pdf"
    ]
   },
   {
@@ -995,7 +995,7 @@
    "id": "297d8054-1513-4fcd-ba6c-e12b904b4c96",
    "metadata": {},
    "source": [
-    "Indumathi, H. (2021, February 25). *Abalone Age Prediction*. Medium. &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; https://harshithaindumathi.medium.com/abalone-age-prediction-607ecda3fa3b\n"
+    "Indumathi, H. (2021, February 25). *Abalone Age Prediction*. Medium. https://harshithaindumathi.medium.com/abalone-age-prediction-607ecda3fa3b\n"
    ]
   },
   {
@@ -1003,8 +1003,16 @@
    "id": "03ef157c-73b7-4d04-91f1-6ac90f9129a1",
    "metadata": {},
    "source": [
-    "Venter, L., Loots, D. T., Vosloo, A., Rensburg, P. J. v., & Lindeque, J. Z. (2018). &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; Abalone growth and associated aspects: now from a metabolic perspective. *Reviews in Aquaculture, 10*(2), 451-473.  &emsp; &emsp; &emsp; &emsp; &emsp;  https://doi.org/10.1111/raq.12181"
+    "Venter, L., Loots, D. T., Vosloo, A., Rensburg, P. J. v., & Lindeque, J. Z. (2018). Abalone growth and associated aspects: now from a metabolic perspective. *Reviews in Aquaculture, 10*(2), 451-473.   https://doi.org/10.1111/raq.12181"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28139b87-c70d-4102-98ef-9cb31feb24a8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
