citation for source of data

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -1000,6 +1000,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "989ba2f4-a913-47cf-8d1a-163bddf28b77",
+   "metadata": {},
+   "source": [
+    "Nash, W., Sellers, T., Talbot, S., Cawthorn, A., & Ford, W. (1995). *Abalone*. UCI Machine Learning Repository. https://doi.org/10.24432/C55C7W"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "03ef157c-73b7-4d04-91f1-6ac90f9129a1",
    "metadata": {},
    "source": [
